--- a/src/main/resources/templates/pizza-form.html
+++ b/src/main/resources/templates/pizza-form.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="ISO-8859-1">
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
 	<title>Insert title here</title>
 </head>
 
