--- a/src/main/resources/templates/coupon-form.html
+++ b/src/main/resources/templates/coupon-form.html
@@ -19,13 +19,13 @@
 		
 		<div>
 			<label for="dataDiInizio" class="form-label">Data di inizio dell'offerta</label>
-			<input type="date" class="form-control" id="dataDiInzio" name="dataDiInzio" th:field="*{dataDiInzio}">
+			<input type="date" class="form-control" id="dataDiInzio" name="dataDiInzio" th:field="*{dataDiInzio}" th:value="*{dataDiInzio}">
 		</div>
 
 		
 		<div>
 			<label for="dataDiFine" class="form-label">Data di fine dell'offerta</label>
-			<input type="date" class="form-control" id="dataDiFine" name="dataDiFine" th:field="*{dataDiFine}">
+			<input type="date" class="form-control" id="dataDiFine" name="dataDiFine" th:field="*{dataDiFine}" th:value="*{dataDiFine}">
 		</div>
 			<input type="submit" value="STORE">
 	</form>
