--- a/src/main/resources/templates/Ingredient-form.html
+++ b/src/main/resources/templates/Ingredient-form.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
-	<h1>Crea Pizza</h1>
+	<h1>Nuovo Ingrediente</h1>
 	<form th:object="${ingredient}" method="POST">
-		<input th:each="ingredient : ${ingrdients}" th:object="${ingredient}" type="checkbox" th:value="*{nome}">
-		<input type="submit" value="STORE">
+		<label for="nome">Nome Ingrediente:</label>
+        <input type="text" id="nome" name="nome" th:field="*{nome}" required>
+        <br>
+        <input type="submit" value="STORE" class="btn btn-primary">
 	</form>
 </body>
 
