--- a/src/main/resources/templates/Pizzas.html
+++ b/src/main/resources/templates/Pizzas.html
@@ -14,7 +14,8 @@
 		<input id="search" type="text" name="q" th:value="${q}">
 		<input type="submit" value="SEARCH">
 	</form>
-	<a href="/pizzas/create">Crea</a>
+	<a th:href="@{/pizzas/create}">Crea</a>
+	<a th:href="@{/ingredients}">Ingredienti</ath>
 	<ul>
 		<li th:each="pizza : ${pizzas}" th:object="${pizza}">
 			<a th:href="@{/pizzas/{id}(id=${pizza.id})}">
